Closed Bug 1210077 Opened 10 years ago Closed 10 years ago

HttpChannelChild::ResetInterception needs to check to see if gNeckoChild is null before calling ContinueAsyncOpen

Categories

(Core :: DOM: Service Workers, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla44
Tracking Status
firefox43 --- fixed
firefox44 --- fixed

People

(Reporter: khuey, Assigned: ehsan.akhgari)

References

Details

Attachments

(1 file)

Otherwise we crash. I saw this when shutting down a browser that was in the middle of doing service workery things, and AsyncOpen already null checks gNeckoChild.
Assignee: nobody → ehsan
Status: NEW → ASSIGNED
Attachment #8671051 - Flags: review?(mcmanus) → review+
Comment on attachment 8671051 [details] [diff] [review] Null check gNeckoChild in HttpChannelChild::ResetInterception() Approval Request Comment [Feature/regressing bug #]: ServiceWorkers [User impact if declined]: This fixes a crash which we don't have an STR for. [Describe test coverage new/current, TreeHerder]: Untested, but obviously gets the job done. :-) [Risks and why]: Doesn't add any risks to non-SW things. [String/UUID change made/needed]: None.
Attachment #8671051 - Flags: approval-mozilla-aurora?
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla44
Comment on attachment 8671051 [details] [diff] [review] Null check gNeckoChild in HttpChannelChild::ResetInterception() Approved for aurora uplift, fixes a crash in feature aimed at 43
Attachment #8671051 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: