Bug 1210077 - Null check gNeckoChild in HttpChannelChild::ResetInterception(); r=mcmanus